@@ -1,5 +1,5 @@
 
-EXTRA_DIST = TODO.gui fityk.spec 
+EXTRA_DIST = fityk.spec 
 AUTOMAKE_OPTIONS = dist-zip dist-bzip2
 SUBDIRS = doc src samples config 
 
