@@ -1,5 +1,7 @@
 [Suggestions from Fityk users survey are not included here yet.]
 
+* document s.guess command 
+
 * problem: fityk can't be compiled with UNICODE-enabled wxWidgets
 
 * problem: problem with locales, that has decimal point different than '.' 
@@ -11,7 +13,10 @@
 * --debug / --release configure flag, equivalent to: -g -fno-inline 
   / -O3 -s -DNDEBUG 
 
-* automate (as possible) building and releasing procedure
+* automate (as possible) procedure of releasing new version
+
+* www page with links to various peak-fitting programs (based on results
+  of survey)
 
 * d.transform  --  new powerful command for transforming data, 
       that will replace d.deviation, d.range(?). It is partially done
@@ -20,7 +25,10 @@
       d.transform S = sqrt(max(1,y[n]))      -> will set std. dev.
       d.transform x=y & y=x                  -> will swap x and y axes 
 
-* write (and verify) program version in scripts 
+* data viewer (grid); GUI for d.transform command 
+
+* write (and verify) program version in scripts; write version/date in config 
+  files 
 
 * problem: "exit" command in script. What should it do? 
   The same about warning/error, when 'exit-on-error=1' is set
