@@ -1,0 +1,5 @@
+
+EXTRA_DIST = nacl01.fit  nacl01.dat  \
+	     SiC_Zn.fit SiC_Zn.dat  \
+	     README      
+
