@@ -1,3 +1,8 @@
+User-visible changes in version 0.4.1:
+* two independent auxiliary plots (by default one is visible)
+* implemented s.guess command that adjusts existing peak - also in peak pop-up 
+  menu (based on patch sent by Jonathan Hunt)
+
 User-visible changes in version 0.4.0:
 
 * multiple datasets in one plot
